# python-research-setup

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
docs/: README.md
notebooks/: sample_notebook.ipynb
src/pyresearch_init/: __init__.py  core.py  init_research.py  utils.py
tests/: test_core.py
