[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-research-setup"
version = "0.1.0"
description = "project to initiate all projects"
readme = "README.md"
authors = [
    {name = "gamir", email = "guy.amir.tech@gmail.com"}
]
requires-python = ">=3.8"
license = {"text" = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
	"argparse"
]


[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.12",
    "black>=21.5b2",
    "flake8>=3.9",
    "mypy>=0.812",
]

[tool.setuptools]
package-dir = {"" = "src"}

[project.scripts]
pyresearch-init = "pyresearch_init.init_research:main"

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
